[package]
name = "russimp"
version = "3.2.0"
authors = ["Jhonny Knaak de Vargas"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp"
categories = ["rendering", "external-ffi-bindings", "game-engines", "multimedia"]
keywords = ["assimp", "game", "gamedev", "graphics"]
repository = "https://github.com/jkvargas/russimp"
description = "Assimp bindings for rust"
exclude = [ "*.bash", "/models" ]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.6"
derivative = "2.2"
strum = "0.25"
strum_macros = "0.25"
mint = { version = "0.5", optional = true }
russimp-sys = {version = "2.0", workspace = true}

[features]
default = []
prebuilt = ["russimp-sys/prebuilt"]
static-link = ["russimp-sys/static-link"]

[package.metadata.docs.rs]
features = ["prebuilt"]
